force-app/main/default/objects/Opportunity/fields/Democracy__c.field-meta.xml
<CustomField>
    <fullName>Democracy__c</fullName>
    <label>Democracy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>