force-app/main/default/objects/Opportunity/fields/Disaster__c.field-meta.xml
<CustomField>
    <fullName>Disaster__c</fullName>
    <label>Disaster</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>