force-app/main/default/objects/Opportunity/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <label>Environment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>