force-app/main/default/objects/Opportunity/fields/Labor__c.field-meta.xml
<CustomField>
    <fullName>Labor__c</fullName>
    <label>Labor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>