force-app/main/default/objects/Opportunity/fields/Pitch_Level__c.field-meta.xml
<CustomField>
    <fullName>Pitch_Level__c</fullName>
    <label>Pitch Level</label>
    <length>50</length>
    <type>Text</type>
</CustomField>