force-app/main/default/objects/Opportunity/fields/Pitch_Message__c.field-meta.xml
<CustomField>
    <fullName>Pitch_Message__c</fullName>
    <label>Pitch Message</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>