force-app/main/default/objects/Opportunity/fields/Pitch_Score__c.field-meta.xml
<CustomField>
    <fullName>Pitch_Score__c</fullName>
    <label>Pitch Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>