force-app/main/default/objects/Opportunity/fields/Thematic__c.field-meta.xml
<CustomField>
    <fullName>Thematic__c</fullName>
    <label>Thematic</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Democracy</fullName>
            </value>
            <value>
                <fullName>Disaster</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Environment</fullName>
            </value>
            <value>
                <fullName>Labor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>